# blockgen

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: doc_blockgen.md
examples/cpp/: README.md  main.cpp  script.py
examples/html/: README.md  data.csv  preview.html  script.py
examples/md/: README.md  script.py
examples/py/: README.md  api.json  client.ipynb  database.py  script.py  server.py
src/blockgen/: __init__.py  core.py  file.py  string.py
tests/core/: test_get_linecol.py  test_parse_block_name_args_kwargs.py
tests/file/: test_atomic_write.py  test_get_blocks.py  test_has_blocks.py  test_list_blocks.py  test_notify_modification_in_console.py  test_parse_blocks.py  test_remove_markers.py  test_replace_blocks.py  test_set_blocks.py  test_write_and_reinject_blocks.py
tests/string/: test_get_blocks.py  test_has_blocks.py  test_list_blocks.py  test_parse_blocks.py  test_remove_markers.py  test_replace_blocks.py  test_set_blocks.py
