[project]
name = "blockgen"
version = "1.0.1"
description = "Python3 module for reading/writing commment-delimited blocks in files"
readme = "README.md"
license = { text = "BSD" }
authors = [
    { name = "Florian Popek", email = "florian.popek@gmail.com" }
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Code Generators",
]
requires-python = ">=3.9"
dependencies = []

[project.urls]
Repository = "https://github.com/ldflo/blockgen"

[build-system]
requires = [
    "uv_build>=0.8.17,<0.9.0",
]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "django",
    "pytest",
    "requests",
    "tox",
    "tox-uv",
]

[tool.tox]
env_list = [
    "py39",
    "py310",
    "py311",
    "py312",
    "py313",
    "py314"
]

[tool.tox.env_run_base]
deps = ["pytest"]
commands = [["pytest"]]
